--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-repo",
+  "name": "galactic-age-calculator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jfpalchak/template-repo.git"
+    "url": "git+https://github.com/jfpalchak/galactic-age-calculator.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jfpalchak/template-repo/issues"
+    "url": "https://github.com/jfpalchak/galactic-age-calculator/issues"
   },
-  "homepage": "https://github.com/jfpalchak/template-repo#readme",
+  "homepage": "https://github.com/jfpalchak/galactic-age-calculator#readme",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
